// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource tests create a gauge chart 1`] = `
Object {
  "background": "#FFFFFF",
  "chartJsConfig": Object {
    "data": Object {
      "datasets": Array [
        Object {
          "backgroundColor": Array [
            "#999999",
            "#111111",
            "#dddddd",
          ],
          "data": Array [
            70,
            150,
            500,
          ],
          "minValue": -200,
          "value": -223.33333333333334,
        },
      ],
      "labels": Array [],
    },
    "options": Object {
      "animation": Object {
        "duration": 0,
      },
      "elements": Object {
        "line": Object {
          "fill": true,
        },
        "point": Object {
          "hitRadius": 15,
        },
      },
      "events": Array [],
      "hover": undefined,
      "layout": Object {
        "padding": Object {
          "bottom": 25,
          "left": 30,
          "right": 30,
          "top": 10,
        },
      },
      "legend": Object {
        "onClick": undefined,
      },
      "maintainAspectRatio": false,
      "needle": Object {
        "color": "#000000",
        "lengthPercentage": 80,
        "radiusPercentage": 2,
        "widthPercentage": 3.2,
      },
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "title": Object {
        "display": true,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "Title",
      },
      "valueLabel": Object {
        "backgroundColor": "#000000",
        "borderRadius": 5,
        "bottomMarginPercentage": 5,
        "color": "#FFFFFF",
        "display": false,
        "fontSize": 30,
        "formatter": null,
        "padding": Object {
          "bottom": 5,
          "left": 5,
          "right": 5,
          "top": 5,
        },
      },
    },
    "type": "gauge",
  },
}
`;

exports[`datasource tests create empty gauge chart 1`] = `
Object {
  "background": "#FFFFFF",
  "chartJsConfig": Object {
    "data": Object {
      "datasets": Array [
        Object {
          "backgroundColor": Array [
            "#6aa84f",
            "#f1c232",
            "#cc0000",
          ],
          "data": Array [
            33,
            66,
            100,
          ],
          "minValue": 0,
          "value": -3.3333333333333335,
        },
      ],
      "labels": Array [],
    },
    "options": Object {
      "animation": Object {
        "duration": 0,
      },
      "elements": Object {
        "line": Object {
          "fill": true,
        },
        "point": Object {
          "hitRadius": 15,
        },
      },
      "events": Array [],
      "hover": undefined,
      "layout": Object {
        "padding": Object {
          "bottom": 25,
          "left": 30,
          "right": 30,
          "top": 25,
        },
      },
      "legend": Object {
        "onClick": undefined,
      },
      "maintainAspectRatio": false,
      "needle": Object {
        "color": "#000000",
        "lengthPercentage": 80,
        "radiusPercentage": 2,
        "widthPercentage": 3.2,
      },
      "responsive": true,
      "responsiveAnimationDuration": 0,
      "title": Object {
        "display": false,
        "fontColor": "#000000",
        "fontSize": 22,
        "fontStyle": "normal",
        "text": "",
      },
      "valueLabel": Object {
        "backgroundColor": "#000000",
        "borderRadius": 5,
        "bottomMarginPercentage": 5,
        "color": "#FFFFFF",
        "display": false,
        "fontSize": 30,
        "formatter": null,
        "padding": Object {
          "bottom": 5,
          "left": 5,
          "right": 5,
          "top": 5,
        },
      },
    },
    "type": "gauge",
  },
}
`;
